Remove unused variables from DeviceTypeService class